CR-2003-02-24-0  Enhancem.: - Added commd profiling ( /tmp/commd/err.XXX file)
                            - New sgecommdcntl options: -profile on|off|reset

JG-2003-02-24-0  Enhancem.: Use spooling framework for qmaster spooling

EB-2003-02-21-1  Cleanup:   Moved functions from sgeobjlib to utilib

AH-2003-02-21-0  Enhancem.: Initial step to JAPI job API that will be used
                            for implementing DRMAA interface
                 Review:    AS

EB-2003-02-21-0  Cleanup:   replaced int by bool where applicable

EB-2003-02-20-1  Enhancem.  Enabled hostgroup code

EB-2003-02-20-0  Enhancem.  Added/Changed ADOC comments concerning sgeobj

EB-2003-02-19-0  Testsuite: Added new test for issue #478

EB-2003-02-18-0  Testsuite: Added new test for issue #403

JG-2003-02-18-0  Cleanup:   Created separate messages files for the new libs
                            libevc, libevm and libmir.
                            Updated ADOC docs for these libs.

EB-2003-02-18-0  Testsuite: Added new test for issue #314
                 Review:    CR

EB-2003-02-18-0  Testsuite: Added missing test for issue #226
                 Review:    CR

JG-2003-02-17-0  Enhancem.  Created new libraries:
                            - libevc (event client code)
                            - libevm (event master code)
                            - libmir (mirror code)
                 Issue:     #466
                 Review:    EB

EB-2003-02-17-0  Bugfix:    qhost -q -l arch=xx crashes if a grid execution 
                            host is down
                 Issue:     #492
                 Bugtraq:   #4819479
                 Review:    JG
                 Changed:   qhost

JG-2003-02-14-0  Bugfix:    Second migration of tightly integrated jobs failed
                            if any host was used in both the first and second
                            run of the job.
                 Review:    EB
                 Changed:   sge_qmaster
